fix: change DatabaseType from VO to string in swag doc and generate new swagger
